fix: blurry content when zooming out in the canvas

--- a/src/app/components/project/shell-block.css
+++ b/src/app/components/project/shell-block.css
@@ -7,8 +7,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
-  border-radius: inherit;
 }
 
 .shell-block-header {
